--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,10 +14,7 @@
       "args": ["--", "--runInBand", "--watch", "--testTimeout=1000000", "${fileBasenameNoExtension}"],
       "sourceMaps": true,
       "outputCapture": "std",
-      "console": "integratedTerminal",
-      // Debug with Node 14 via nvm.
-      // On Windows, you might have to change this to a specific version.
-      "runtimeVersion": "14"
+      "console": "integratedTerminal"
     },
     {
       "type": "node",
