--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "docs": "vuepress dev docs --host localhost",
     "docs:build": "vuepress build docs",
     "format": "prettier --write '**/*'",
-    "prepare": "husky install",
+    "prepare": "husky",
     "pub": "node ./lib/cli.js publish",
     "release": "node ./lib/cli.js publish -y",
     "release:docs": "yarn docs:build && yarn gh-pages -d docs/.vuepress/dist --dotfiles",
@@ -75,7 +75,7 @@
     "find-free-port": "^2.0.0",
     "get-port": "^5.0.0",
     "gh-pages": "^6.0.0",
-    "husky": "^8.0.0",
+    "husky": "^9.0.0",
     "jest": "^29.0.0",
     "lint-staged": "^12.0.0",
     "mermaid": "^11.4.0",
