--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -45,6 +45,8 @@ jobs:
 
       - run: yarn checkchange --verbose
 
+      - run: yarn lint
+
       - run: yarn test:unit
 
       - run: yarn test:func
