--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "docs": "vuepress dev docs --host localhost",
     "docs:build": "vuepress build docs",
     "format": "prettier --write '**/*'",
+    "lint": "eslint --max-warnings 0",
     "prepare": "husky",
-    "pub": "node ./lib/cli.js publish",
     "release": "node ./lib/cli.js publish -y",
     "release:docs": "yarn docs:build && yarn gh-pages -d docs/.vuepress/dist --dotfiles",
     "start": "tsc -w --preserveWatchOutput",
@@ -59,6 +59,8 @@
     "yargs-parser": "^21.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.3",
+    "@eslint/js": "^9.15.0",
     "@jest/globals": "^29.0.0",
     "@types/fs-extra": "^11.0.0",
     "@types/lodash": "^4.14.191",
@@ -72,9 +74,11 @@
     "@vuepress/bundler-vite": "^2.0.0-rc",
     "@vuepress/plugin-search": "^2.0.0-rc",
     "@vuepress/theme-default": "^2.0.0-rc",
+    "eslint": "^9.15.0",
     "find-free-port": "^2.0.0",
     "get-port": "^5.0.0",
     "gh-pages": "^6.0.0",
+    "globals": "^15.12.0",
     "husky": "^9.0.0",
     "jest": "^29.0.0",
     "lint-staged": "^15.0.0",
@@ -86,6 +90,7 @@
     "tmp": "^0.2.1",
     "ts-jest": "^29.0.0",
     "typescript": "~5.7.0",
+    "typescript-eslint": "^8.15.0",
     "verdaccio": "5.29.2",
     "verdaccio-auth-memory": "^10.2.0",
     "verdaccio-memory": "^10.3.0",
