Update verdaccio to v6

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/tmp": "^0.2.3",
     "@types/toposort": "^2.0.3",
     "@types/yargs-parser": "^21.0.0",
+    "@verdaccio/types": "^10.8.0",
     "@vuepress/bundler-vite": "^2.0.0-rc",
     "@vuepress/plugin-search": "^2.0.0-rc",
     "@vuepress/theme-default": "^2.0.0-rc",
@@ -91,7 +92,7 @@
     "ts-jest": "^29.0.0",
     "typescript": "~5.7.0",
     "typescript-eslint": "^8.15.0",
-    "verdaccio": "5.29.2",
+    "verdaccio": "^6.0.0",
     "verdaccio-auth-memory": "^10.2.0",
     "verdaccio-memory": "^10.3.0",
     "vuepress": "^2.0.0-rc",
