--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "execa": "^5.0.0",
     "fs-extra": "^11.1.1",
     "lodash": "^4.17.15",
-    "minimatch": "^3.0.4",
     "p-graph": "^1.1.2",
     "p-limit": "^3.0.2",
+    "picomatch": "^4.0.0",
     "prompts": "^2.4.2",
     "semver": "^7.0.0",
     "toposort": "^2.0.2",
@@ -64,8 +64,8 @@
     "@jest/globals": "^29.0.0",
     "@types/fs-extra": "^11.0.0",
     "@types/lodash": "^4.14.191",
-    "@types/minimatch": "^5.0.0",
     "@types/node": "^20.0.0",
+    "@types/picomatch": "^3.0.1",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.13",
     "@types/tmp": "^0.2.3",
